dx/force-app/main/default/objects/ltng_TileLauncherNavigationFormat__mdt/ltng_TileLauncherNavigationFormat__mdt.object-meta.xml
<CustomObject>
    <description>Format for a url to provide navigation for Tiles in the Tile Launcher</description>
    <label>Tile Launcher Navigation Format</label>
    <pluralLabel>Tile Launcher Navigation Formats</pluralLabel>
</CustomObject>