dx/force-app/main/default/objects/ltng_TileLauncherNavigationFormat__mdt/fields/Navigation_Object_Format__c.field-meta.xml
<CustomField>
    <fullName>Navigation_Object_Format__c</fullName>
    <inlineHelpText>Format of the navigation object (using matches from the URL Format)</inlineHelpText>
    <label>Navigation Object Format</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>