dx/force-app/main/default/objects/ltng_TileLauncherNavigationFormat__mdt/fields/Navigation_Type__c.field-meta.xml
<CustomField>
    <fullName>Navigation_Type__c</fullName>
    <description>For more information, please see:
https://developer.salesforce.com/docs/atlas.en-us.lightning.meta/lightning/components_navigation_page_definitions.htm</description>
    <inlineHelpText>Knowledge Article - Knowledge Article
Named Page - access: &#39;home&#39;, &#39;chatter&#39;, &#39;today&#39;
Navigation Item - Custom Tab
Object Page - Recent or list views for an object
Record Page - Directly access a record
Record Relationship Page - Related List</inlineHelpText>
    <label>Navigation Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Knowledge Article</fullName>
                <default>true</default>
                <label>Knowledge Article</label>
            </value>
            <value>
                <fullName>Named Page</fullName>
            </value>
            <value>
                <fullName>Navigation Item Page</fullName>
            </value>
            <value>
                <fullName>Object Page</fullName>
            </value>
            <value>
                <fullName>Record Page</fullName>
            </value>
            <value>
                <fullName>Record Relationship Page</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>