dx/force-app/main/default/objects/ltng_TileLauncherNavigationFormat__mdt/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <defaultValue>100</defaultValue>
    <inlineHelpText>Items with higher priority are checked first.
(The first one that matches, will be used)</inlineHelpText>
    <label>Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>