dx/force-app/main/default/objects/ltng_TileLauncherNavigationFormat__mdt/fields/URL_Format__c.field-meta.xml
<CustomField>
    <fullName>URL_Format__c</fullName>
    <inlineHelpText>Regular expression for this pattern</inlineHelpText>
    <label>URL Format</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>