dx/force-app/main/default/objects/ltng_TileLauncherNavigationFormat__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Navigation_Type__c</columns>
    <columns>URL_Format__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>